--- a/package.json
+++ b/package.json
@@ -9,12 +9,36 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@nextui-org/react": "^2.2.9",
+    "@nextui-org/system": "^2.0.15",
+    "@radix-ui/react-icons": "^1.3.0",
+    "@react-three/drei": "^9.89.1",
+    "@react-three/fiber": "^8.15.12",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.0.0",
+    "file-loader": "^6.2.0",
+    "framer-motion": "^10.16.12",
+    "maath": "^0.10.4",
+    "next": "14.0.3",
+    "primeflex": "^3.3.1",
+    "primeicons": "^6.0.1",
+    "primereact": "^10.2.1",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.0.3"
+    "sass": "^1.69.5",
+    "scss": "^0.2.4",
+    "tailwind-merge": "^2.1.0",
+    "tailwindcss-animate": "^1.0.7",
+    "three": "^0.159.0",
+    "valtio": "^1.12.1"
   },
   "devDependencies": {
+    "@svgr/webpack": "^8.1.0",
+    "autoprefixer": "^10.4.16",
     "eslint": "^8",
-    "eslint-config-next": "14.0.3"
+    "eslint-config-next": "14.0.3",
+    "postcss": "^8.4.32",
+    "tailwindcss": "^3.3.5",
+    "url-loader": "^4.1.1"
   }
 }
