--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@radix-ui/react-icons": "^1.3.0",
     "@react-three/drei": "^9.89.1",
     "@react-three/fiber": "^8.15.12",
+    "aos": "^2.3.4",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "file-loader": "^6.2.0",
