--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^6.5.1",
     "@nextui-org/react": "^2.2.9",
     "@nextui-org/system": "^2.0.15",
     "@radix-ui/react-icons": "^1.3.0",
@@ -21,13 +22,14 @@
     "framer-motion": "^10.16.12",
     "maath": "^0.10.4",
     "next": "14.0.3",
-    "primeflex": "^3.3.1",
-    "primeicons": "^6.0.1",
-    "primereact": "^10.2.1",
     "react": "^18",
+    "react-countup": "^6.5.0",
     "react-dom": "^18",
+    "react-slick": "^0.29.0",
+    "react-visibility-sensor": "^5.1.1",
     "sass": "^1.69.5",
     "scss": "^0.2.4",
+    "slick-carousel": "^1.8.1",
     "tailwind-merge": "^2.1.0",
     "tailwindcss-animate": "^1.0.7",
     "three": "^0.159.0",
