--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "framer-motion": "^10.16.12",
     "maath": "^0.10.4",
     "next": "14.0.3",
+    "primeflex": "^3.3.1",
+    "primereact": "^10.2.1",
     "react": "^18",
     "react-countup": "^6.5.0",
     "react-dom": "^18",
