--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react": "^18",
     "react-countup": "^6.5.0",
     "react-dom": "^18",
+    "react-icons": "^4.12.0",
     "react-slick": "^0.29.0",
     "react-visibility-sensor": "^5.1.1",
     "sass": "^1.69.5",
