--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emailjs/browser": "^3.11.0",
     "@fortawesome/fontawesome-free": "^6.5.1",
     "@nextui-org/react": "^2.2.9",
     "@nextui-org/system": "^2.0.15",
@@ -18,6 +19,7 @@
     "aos": "^2.3.4",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
+    "emailjs": "^4.0.3",
     "file-loader": "^6.2.0",
     "framer-motion": "^10.16.12",
     "maath": "^0.10.4",
