auth and api setup

--- a/package.json
+++ b/package.json
@@ -17,11 +17,13 @@
     "@react-three/drei": "^9.89.1",
     "@react-three/fiber": "^8.15.12",
     "aos": "^2.3.4",
+    "axios": "^1.6.4",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "emailjs": "^4.0.3",
     "file-loader": "^6.2.0",
     "framer-motion": "^10.16.12",
+    "js-cookie": "^3.0.5",
     "maath": "^0.10.4",
     "next": "14.0.3",
     "primeflex": "^3.3.1",
