--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test":"",
+    "prepare": "husky install"
   },
   "dependencies": {
     "@emailjs/browser": "^3.11.0",
@@ -16,6 +18,9 @@
     "@radix-ui/react-icons": "^1.3.0",
     "@react-three/drei": "^9.89.1",
     "@react-three/fiber": "^8.15.12",
+    "@reduxjs/toolkit": "^2.0.1",
+    "@sentry/browser": "^7.92.0",
+    "@sentry/nextjs": "^7.92.0",
     "aos": "^2.3.4",
     "axios": "^1.6.4",
     "class-variance-authority": "^0.7.0",
@@ -23,17 +28,23 @@
     "emailjs": "^4.0.3",
     "file-loader": "^6.2.0",
     "framer-motion": "^10.16.12",
+    "husky": "^8.0.3",
     "js-cookie": "^3.0.5",
+    "jwt-decode": "^3.1.2",
     "maath": "^0.10.4",
     "next": "14.0.3",
-    "primeflex": "^3.3.1",
-    "primereact": "^10.2.1",
     "react": "^18",
     "react-countup": "^6.5.0",
     "react-dom": "^18",
+    "react-hook-form": "^7.49.2",
     "react-icons": "^4.12.0",
+    "react-query": "^3.39.3",
+    "react-redux": "^9.0.4",
     "react-slick": "^0.29.0",
     "react-visibility-sensor": "^5.1.1",
+    "redux": "^5.0.1",
+    "redux-persist": "^6.0.0",
+    "redux-persist-cookie-storage": "^1.0.0",
     "sass": "^1.69.5",
     "scss": "^0.2.4",
     "slick-carousel": "^1.8.1",
