--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-NEXT_PUBLIC_AUTH_USER_LOGIN = http://https://cloudy-mite-purse.cyclic.app/auth/login
-NEXT_PUBLIC_AUTH_USER_SIGNUP = http://https://cloudy-mite-purse.cyclic.app/auth/signup
+NEXT_PUBLIC_AUTH_USER_LOGIN = https://cloudy-mite-purse.cyclic.app/auth/login
+NEXT_PUBLIC_AUTH_USER_SIGNUP = https://cloudy-mite-purse.cyclic.app/auth/signup
