--- a/.env.development
+++ b/.env.development
@@ -1,2 +1,6 @@
+# Auth Enviroment Variables #
 NEXT_PUBLIC_AUTH_USER_LOGIN = http://localhost:8080/auth/login
 NEXT_PUBLIC_AUTH_USER_SIGNUP = http://localhost:8080/auth/signup
+
+# Project Enviroment Variables #
+NEXT_PUBLIC_GET_PROJECT_BY_USER_ID =  http://localhost:8080/project/getByUserId
