--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "test":"",
+    "test": "",
     "prepare": "husky install"
   },
   "dependencies": {
@@ -21,10 +21,11 @@
     "@reduxjs/toolkit": "^2.0.1",
     "@sentry/browser": "^7.92.0",
     "@sentry/nextjs": "^7.92.0",
+    "@tanstack/react-table": "^8.11.3",
     "aos": "^2.3.4",
     "axios": "^1.6.4",
     "class-variance-authority": "^0.7.0",
-    "clsx": "^2.0.0",
+    "clsx": "^2.1.0",
     "emailjs": "^4.0.3",
     "file-loader": "^6.2.0",
     "framer-motion": "^10.16.12",
@@ -32,6 +33,7 @@
     "js-cookie": "^3.0.5",
     "jwt-decode": "^3.1.2",
     "maath": "^0.10.4",
+    "moment": "^2.30.1",
     "next": "14.0.3",
     "react": "^18",
     "react-countup": "^6.5.0",
@@ -48,7 +50,7 @@
     "sass": "^1.69.5",
     "scss": "^0.2.4",
     "slick-carousel": "^1.8.1",
-    "tailwind-merge": "^2.1.0",
+    "tailwind-merge": "^2.2.0",
     "tailwindcss-animate": "^1.0.7",
     "three": "^0.159.0",
     "valtio": "^1.12.1"
