--- a/.env.development
+++ b/.env.development
@@ -3,4 +3,9 @@ NEXT_PUBLIC_AUTH_USER_LOGIN = http://localhost:8080/auth/login
 NEXT_PUBLIC_AUTH_USER_SIGNUP = http://localhost:8080/auth/signup
 
 # Project Enviroment Variables #
+NEXT_PUBLIC_CREATE_PROJECT =  http://localhost:8080/project/create
 NEXT_PUBLIC_GET_PROJECT_BY_USER_ID =  http://localhost:8080/project/getByUserId
+NEXT_PUBLIC_GET_PROJECT_BY_STATUS =  http://localhost:8080/project/getByStatus
+
+# Service Enviroment Variables #
+NEXT_PUBLIC_GET_SERVICE =  http://localhost:8080/service/get
