--- a/package.json
+++ b/package.json
@@ -13,9 +13,15 @@
   "dependencies": {
     "@emailjs/browser": "^3.11.0",
     "@fortawesome/fontawesome-free": "^6.5.1",
+    "@hookform/resolvers": "^3.3.4",
     "@nextui-org/react": "^2.2.9",
     "@nextui-org/system": "^2.0.15",
+    "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-popover": "^1.0.7",
+    "@radix-ui/react-select": "^2.0.0",
+    "@radix-ui/react-slot": "^1.0.2",
     "@react-three/drei": "^9.89.1",
     "@react-three/fiber": "^8.15.12",
     "@reduxjs/toolkit": "^2.0.1",
@@ -26,6 +32,7 @@
     "axios": "^1.6.4",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "date-fns": "^3.1.0",
     "emailjs": "^4.0.3",
     "file-loader": "^6.2.0",
     "framer-motion": "^10.16.12",
@@ -37,6 +44,7 @@
     "next": "14.0.3",
     "react": "^18",
     "react-countup": "^6.5.0",
+    "react-day-picker": "^8.10.0",
     "react-dom": "^18",
     "react-hook-form": "^7.49.2",
     "react-icons": "^4.12.0",
@@ -53,7 +61,8 @@
     "tailwind-merge": "^2.2.0",
     "tailwindcss-animate": "^1.0.7",
     "three": "^0.159.0",
-    "valtio": "^1.12.1"
+    "valtio": "^1.12.1",
+    "yup": "^1.3.3"
   },
   "devDependencies": {
     "@svgr/webpack": "^8.1.0",
