--- a/.env.development
+++ b/.env.development
@@ -1,2 +1,5 @@
 NEXT_PUBLIC_AUTH_USER_LOGIN = http://localhost:8080/auth/login
 NEXT_PUBLIC_AUTH_USER_SIGNUP = http://localhost:8080/auth/signup
+
+
+TEXT
