boost project modal and ui is completed.

--- a/.env.development
+++ b/.env.development
@@ -6,6 +6,7 @@ NEXT_PUBLIC_AUTH_USER_SIGNUP = http://localhost:8080/auth/signup
 NEXT_PUBLIC_CREATE_PROJECT =  http://localhost:8080/project/create
 NEXT_PUBLIC_GET_PROJECT_BY_USER_ID =  http://localhost:8080/project/getByUserId
 NEXT_PUBLIC_GET_PROJECT_BY_STATUS =  http://localhost:8080/project/getByStatus
+NEXT_PUBLIC_CREATE_DELETE =  http://localhost:8080/project/delete
 
 # Service Enviroment Variables #
-NEXT_PUBLIC_GET_SERVICE =  http://localhost:8080/service/get
+NEXT_PUBLIC_GET_SERVICES =  http://localhost:8080/service/get
