major updates in admin panel

--- a/.env.development
+++ b/.env.development
@@ -7,6 +7,7 @@ NEXT_PUBLIC_AUTH_ADMIN_SIGNUP = http://localhost:8080/auth/adminSignup
 # Project Enviroment Variables #
 NEXT_PUBLIC_CREATE_PROJECT =  http://localhost:8080/project/create
 NEXT_PUBLIC_UPDATE_PROJECTDETAIL =  http://localhost:8080/project/update
+NEXT_PUBLIC_GET_PROJECT_BY_CODE =  http://localhost:8080/project/getByCode
 NEXT_PUBLIC_GET_PROJECT_BY_USER_ID =  http://localhost:8080/project/getByUserId
 NEXT_PUBLIC_GET_PROJECT_ALL_PROJECTS =  http://localhost:8080/project/getAllProjects
 NEXT_PUBLIC_GET_PROJECT_BY_STATUS_BY_ID =  http://localhost:8080/project/getByStatusById
