bugs resolved and env updated

--- a/.env
+++ b/.env
@@ -1,2 +1,20 @@
+# Auth Enviroment Variables #
 NEXT_PUBLIC_AUTH_USER_LOGIN = https://cloudy-mite-purse.cyclic.app/auth/login
 NEXT_PUBLIC_AUTH_USER_SIGNUP = https://cloudy-mite-purse.cyclic.app/auth/signup
+NEXT_PUBLIC_AUTH_ADMIN_LOGIN = https://cloudy-mite-purse.cyclic.app/auth/adminLogin
+NEXT_PUBLIC_AUTH_ADMIN_SIGNUP = https://cloudy-mite-purse.cyclic.app/auth/adminSignup
+
+# Project Enviroment Variables #
+NEXT_PUBLIC_CREATE_PROJECT =  https://cloudy-mite-purse.cyclic.app/project/create
+NEXT_PUBLIC_UPDATE_PROJECTDETAIL =  https://cloudy-mite-purse.cyclic.app/project/update
+NEXT_PUBLIC_GET_PROJECT_BY_CODE =  https://cloudy-mite-purse.cyclic.app/project/getByCode
+NEXT_PUBLIC_GET_PROJECT_BY_USER_ID =  https://cloudy-mite-purse.cyclic.app/project/getByUserId
+NEXT_PUBLIC_GET_PROJECT_ALL_PROJECTS =  https://cloudy-mite-purse.cyclic.app/project/getAllProjects
+NEXT_PUBLIC_GET_PROJECT_BY_STATUS_BY_ID =  https://cloudy-mite-purse.cyclic.app/project/getByStatusById
+NEXT_PUBLIC_GET_PROJECT_BY_STATUS =  https://cloudy-mite-purse.cyclic.app/project/getByStatus
+NEXT_PUBLIC_CREATE_DELETE =  https://cloudy-mite-purse.cyclic.app/project/delete
+NEXT_PUBLIC_GET_PROJECT_BY_ID =  https://cloudy-mite-purse.cyclic.app/project/details/
+NEXT_PUBLIC_GET_PROJECT_IDS =  https://cloudy-mite-purse.cyclic.app/project/ids
+
+# Service Enviroment Variables #
+NEXT_PUBLIC_GET_SERVICES =  https://cloudy-mite-purse.cyclic.app/service/get
