--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
     "start": "next start",
     "lint": "next lint",
     "test": "",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "cypress": "cypress open",
+    "cypress-staging": "cypress open --config-file cypress.staging.config.js",
+    "cypress:headless": "cypress run"
   },
   "dependencies": {
     "@emailjs/browser": "^3.11.0",
@@ -32,6 +35,7 @@
     "axios": "^1.6.4",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "cypress": "^13.6.3",
     "date-fns": "^3.1.0",
     "emailjs": "^4.0.3",
     "file-loader": "^6.2.0",
