major changes in dashboard and home ui

--- a/.env.development
+++ b/.env.development
@@ -1,4 +1,5 @@
 # Auth Enviroment Variables #
+NEXT_PUBLIC_AUTH_VERIFY_SESSION = http://localhost:8080/auth/verification
 NEXT_PUBLIC_AUTH_USER_LOGIN = http://localhost:8080/auth/login
 NEXT_PUBLIC_AUTH_USER_SIGNUP = http://localhost:8080/auth/signup
 NEXT_PUBLIC_AUTH_ADMIN_LOGIN = http://localhost:8080/auth/adminLogin
