--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "axios": "^1.6.4",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "cookies": "^0.9.1",
     "cypress": "^13.6.3",
     "date-fns": "^3.1.0",
     "emailjs": "^4.0.3",
