--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
 # Auth Enviroment Variables #
+NEXT_PUBLIC_AUTH_VERIFY_SESSION = https://cloudy-mite-purse.cyclic.app/auth/verification
 NEXT_PUBLIC_AUTH_USER_LOGIN = https://cloudy-mite-purse.cyclic.app/auth/login
 NEXT_PUBLIC_AUTH_USER_SIGNUP = https://cloudy-mite-purse.cyclic.app/auth/signup
 NEXT_PUBLIC_AUTH_ADMIN_LOGIN = https://cloudy-mite-purse.cyclic.app/auth/adminLogin
