added footer and chat options

--- a/.env
+++ b/.env
@@ -19,3 +19,6 @@ NEXT_PUBLIC_GET_PROJECT_IDS =  https://cloudy-mite-purse.cyclic.app/project/ids
 
 # Service Enviroment Variables #
 NEXT_PUBLIC_GET_SERVICES =  https://cloudy-mite-purse.cyclic.app/service/get
+
+# Google Analytics ID #
+NEXT_PUBLIC_GOOGLE_ID =  G-6FN1CXZD27
