--- a/.env.development
+++ b/.env.development
@@ -19,3 +19,7 @@ NEXT_PUBLIC_GET_PROJECT_IDS =  http://localhost:8080/project/ids
 
 # Service Enviroment Variables #
 NEXT_PUBLIC_GET_SERVICES =  http://localhost:8080/service/get
+
+
+# Google Analytics ID #
+NEXT_PUBLIC_GOOGLE_ID =  G-6FN1CXZD27
