--- a/package.json
+++ b/package.json
@@ -50,12 +50,14 @@
     "react-countup": "^6.5.0",
     "react-day-picker": "^8.10.0",
     "react-dom": "^18",
+    "react-ga4": "^2.1.0",
     "react-hook-form": "^7.49.2",
     "react-icons": "^4.12.0",
     "react-query": "^3.39.3",
     "react-redux": "^9.0.4",
     "react-slick": "^0.29.0",
     "react-visibility-sensor": "^5.1.1",
+    "react-whatsapp": "^0.3.0",
     "redux": "^5.0.1",
     "redux-persist": "^6.0.0",
     "redux-persist-cookie-storage": "^1.0.0",
