--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "sass": "^1.69.5",
     "scss": "^0.2.4",
     "slick-carousel": "^1.8.1",
+    "socket.io-client": "^4.7.5",
     "tailwind-merge": "^2.2.0",
     "tailwindcss-animate": "^1.0.7",
     "three": "^0.159.0",
