--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "react-query": "^3.39.3",
     "react-redux": "^9.0.4",
     "react-slick": "^0.29.0",
+    "react-toggle-dark-mode": "^1.1.1",
     "react-visibility-sensor": "^5.1.1",
     "react-whatsapp": "^0.3.0",
     "redux": "^5.0.1",
