Major updates: Paginations implementation. Ui revamp implementation

--- a/.env.development
+++ b/.env.development
@@ -20,6 +20,10 @@ NEXT_PUBLIC_GET_PROJECT_IDS =  http://localhost:8080/project/ids
 # Service Enviroment Variables #
 NEXT_PUBLIC_GET_SERVICES =  http://localhost:8080/service/get
 
+# Profile Enviroment Variables #
+NEXT_PUBLIC_UPDATE_PROFILE =  http://localhost:8080/user/edit
+NEXT_PUBLIC_GET_PROFILE =  http://localhost:8080/user/get
+
 
 # Google Analytics ID #
 NEXT_PUBLIC_GOOGLE_ID =  G-6FN1CXZD27
