--- a/.env
+++ b/.env
@@ -21,8 +21,8 @@ NEXT_PUBLIC_GET_PROJECT_IDS =  https://cloudy-mite-purse.cyclic.app/project/ids
 NEXT_PUBLIC_GET_SERVICES =  https://cloudy-mite-purse.cyclic.app/service/get
 
 # Profile Enviroment Variables #
-NEXT_PUBLIC_UPDATE_PROFILE =  http://localhost:8080/user/edit
-NEXT_PUBLIC_GET_PROFILE =  http://localhost:8080/user/get
+NEXT_PUBLIC_UPDATE_PROFILE =   https://cloudy-mite-purse.cyclic.app/user/edit
+NEXT_PUBLIC_GET_PROFILE =   https://cloudy-mite-purse.cyclic.app/user/get
 
 # Google Analytics ID #
 NEXT_PUBLIC_GOOGLE_ID =  G-6FN1CXZD27
