forget password api creation and integration

--- a/.env.development
+++ b/.env.development
@@ -4,6 +4,8 @@ NEXT_PUBLIC_AUTH_USER_LOGIN = http://localhost:8080/auth/login
 NEXT_PUBLIC_AUTH_USER_SIGNUP = http://localhost:8080/auth/signup
 NEXT_PUBLIC_AUTH_ADMIN_LOGIN = http://localhost:8080/auth/adminLogin
 NEXT_PUBLIC_AUTH_ADMIN_SIGNUP = http://localhost:8080/auth/adminSignup
+NEXT_PUBLIC_AUTH_VERIFY_LINK = http://localhost:8080/auth/linkVerification
+NEXT_PUBLIC_RESET_PASSWORD = http://localhost:8080/auth/resetPassword
 
 # Project Enviroment Variables #
 NEXT_PUBLIC_CREATE_PROJECT =  http://localhost:8080/project/create
