--- a/.env
+++ b/.env
@@ -1,28 +1,28 @@
 # Auth Enviroment Variables #
-NEXT_PUBLIC_AUTH_VERIFY_SESSION = https://server-algorim.up.railway.app/auth/verification
-NEXT_PUBLIC_AUTH_USER_LOGIN = https://server-algorim.up.railway.app/auth/login
-NEXT_PUBLIC_AUTH_USER_SIGNUP = https://server-algorim.up.railway.app/auth/signup
-NEXT_PUBLIC_AUTH_ADMIN_LOGIN = https://server-algorim.up.railway.app/auth/adminLogin
-NEXT_PUBLIC_AUTH_ADMIN_SIGNUP = https://server-algorim.up.railway.app/auth/adminSignup
+NEXT_PUBLIC_AUTH_VERIFY_SESSION = https://ralox-server-production.up.railway.app/auth/verification
+NEXT_PUBLIC_AUTH_USER_LOGIN = https://ralox-server-production.up.railway.app/auth/login
+NEXT_PUBLIC_AUTH_USER_SIGNUP = https://ralox-server-production.up.railway.app/auth/signup
+NEXT_PUBLIC_AUTH_ADMIN_LOGIN = https://ralox-server-production.up.railway.app/auth/adminLogin
+NEXT_PUBLIC_AUTH_ADMIN_SIGNUP = https://ralox-server-production.up.railway.app/auth/adminSignup
 
 # Project Enviroment Variables #
-NEXT_PUBLIC_CREATE_PROJECT =  https://server-algorim.up.railway.app/project/create
-NEXT_PUBLIC_UPDATE_PROJECTDETAIL =  https://server-algorim.up.railway.app/project/update
-NEXT_PUBLIC_GET_PROJECT_BY_CODE =  https://server-algorim.up.railway.app/project/getByCode
-NEXT_PUBLIC_GET_PROJECT_BY_USER_ID =  https://server-algorim.up.railway.app/project/getByUserId
-NEXT_PUBLIC_GET_PROJECT_ALL_PROJECTS =  https://server-algorim.up.railway.app/project/getAllProjects
-NEXT_PUBLIC_GET_PROJECT_BY_STATUS_BY_ID =  https://server-algorim.up.railway.app/project/getByStatusById
-NEXT_PUBLIC_GET_PROJECT_BY_STATUS =  https://server-algorim.up.railway.app/project/getByStatus
-NEXT_PUBLIC_CREATE_DELETE =  https://server-algorim.up.railway.app/project/delete
-NEXT_PUBLIC_GET_PROJECT_BY_ID =  https://server-algorim.up.railway.app/project/details/
-NEXT_PUBLIC_GET_PROJECT_IDS =  https://server-algorim.up.railway.app/project/ids
+NEXT_PUBLIC_CREATE_PROJECT =  https://ralox-server-production.up.railway.app/project/create
+NEXT_PUBLIC_UPDATE_PROJECTDETAIL =  https://ralox-server-production.up.railway.app/project/update
+NEXT_PUBLIC_GET_PROJECT_BY_CODE =  https://ralox-server-production.up.railway.app/project/getByCode
+NEXT_PUBLIC_GET_PROJECT_BY_USER_ID =  https://ralox-server-production.up.railway.app/project/getByUserId
+NEXT_PUBLIC_GET_PROJECT_ALL_PROJECTS =  https://ralox-server-production.up.railway.app/project/getAllProjects
+NEXT_PUBLIC_GET_PROJECT_BY_STATUS_BY_ID =  https://ralox-server-production.up.railway.app/project/getByStatusById
+NEXT_PUBLIC_GET_PROJECT_BY_STATUS =  https://ralox-server-production.up.railway.app/project/getByStatus
+NEXT_PUBLIC_CREATE_DELETE =  https://ralox-server-production.up.railway.app/project/delete
+NEXT_PUBLIC_GET_PROJECT_BY_ID =  https://ralox-server-production.up.railway.app/project/details/
+NEXT_PUBLIC_GET_PROJECT_IDS =  https://ralox-server-production.up.railway.app/project/ids
 
 # Service Enviroment Variables #
-NEXT_PUBLIC_GET_SERVICES =  https://server-algorim.up.railway.app/service/get
+NEXT_PUBLIC_GET_SERVICES =  https://ralox-server-production.up.railway.app/service/get
 
 # Profile Enviroment Variables #
-NEXT_PUBLIC_UPDATE_PROFILE =   https://server-algorim.up.railway.app/user/edit
-NEXT_PUBLIC_GET_PROFILE =   https://server-algorim.up.railway.app/user/get
+NEXT_PUBLIC_UPDATE_PROFILE =   https://ralox-server-production.up.railway.app/user/edit
+NEXT_PUBLIC_GET_PROFILE =   https://ralox-server-production.up.railway.app/user/get
 
 # Google Analytics ID #
 NEXT_PUBLIC_GOOGLE_ID =  G-6FN1CXZD27
